Nieuwe digitaal toetsen design instructies

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -124,7 +124,7 @@ Inzage:
                         <h4 style="text-align: left;"><strong>What is TestVision?</strong></h4>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: auto; background-color: #ffffff;">
-                        <p>TestVision is testing software that serves the examination process. It is a comprehensive testing system that supports you in developing, administering, grading, and analyzing tests. We recommend the use of TestVision because:
+                        <p>TestVision is testing software that serves the examination process of online exams. It is a comprehensive testing system that supports you in developing, administering, grading, and analyzing tests. We recommend the use of TestVision because:
                             <ul>
                                 <li>There will be technical guidance present during the exam. Therefore, <span style="color: #079C97;"><strong>students aren't able to plagiarize or commit fraud</strong></span> during the exam.</li>
                                 <li>In creating the exam, <span style="color: #079C97;"><strong>teachers only have to edit questions and no longer have to deal with all the technical aspects</strong></span> of a test. Questions can easily be changed by the teacher until the last moment, provided that no major changes are being made. For instance, when new questions need to be added or the entire structure of the exam needs to change you will need to communicate these changes with ICTO at least 1 week before the exam.</li>
@@ -151,7 +151,7 @@ Inzage:
                         <h4 style="text-align: left;"><strong>Applying for TestVision</strong></h4>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: auto; background-color: #ffffff;">
-                        <p>Notify your <span style="color: #079C97;"><b>programme coordinator</b></span> as early as possible. Programme coordinators are in charge of scheduling the <span style="color: #079C97;"><b>exam or inspection</b></span> and sending a request to ICTO. Our team must book in all details according to the roster at least 7 weeks before the start of the test, retake or inspection.</p>
+                        <p>If you want to do an online exam with TestVision, notify your <span style="color: #079C97;"><b>programme coordinator</b></span> as early as possible. Programme coordinators are in charge of scheduling the <span style="color: #079C97;"><b>exam or inspection</b></span> and sending a request for TestVision support to ICTO. Thereafter, our team must book in all details according to the roster at least 7 weeks before the start of the exam, retake or inspection.</p>
                         <p>The following deadlines apply:
                             <ul>
                                 <li>Exams in block 1 --- July, 29 (2022)</li>
