--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -1,6 +1,9 @@
 <!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
+<!-- Back to top -->
+<p><a id="topmenu"></a></p>
+
 <!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
@@ -15,52 +18,72 @@
     </div>
 </div>
 
-<!-- Back to top -->
-<p><a id="topmenu"></a></p>
+<div class="grid-row">
 
-<div>
-    <table style="border-collapse: collapse; width: 98.1164%; border-style: hidden; height: 53px;" border="0">
-        <tbody>
-            <tr style="height: 43px;">
-                <td style="width: 33.3033%; height: 43px; text-align: center;">
-                    <h4><strong>Before the Exam</strong></h4>
-                </td>
-                <td style="width: 33.3033%; height: 43px; text-align: center;">
-                    <h4><strong>During the Exam</strong></h4>
-                </td>
-                <td style="width: 33.3061%; height: 43px; text-align: center;">
-                    <h4><strong>After the Exam</strong></h4>
-                </td>
-            </tr>
-            <tr style="height: 10px;">
-                <td style="width: 33.3033%; height: 10px; text-align: center;">
-                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="_self" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7137620/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137620" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137620" data-api-returntype="File" /></a></p>
-                </td>
-                <td style="width: 33.3033%; height: 10px; text-align: center;">
-                    <p><img src="https://canvas.uva.nl/courses/8175/files/7137618/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137618" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137618" data-api-returntype="File" /></p>
-                </td>
-                <td style="width: 33.3061%; height: 10px; text-align: center;">
-                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" target="_self" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%257C-assessment" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7137622/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137622/" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137622" data-api-returntype="File" /></a></p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <!-- Questions + test -->
+    <div class="col-xs-20 col-md-4">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
+                <div class="content-box pad-box-mini border border-b">
+                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Exam settings</em></span></h4>
+                </div>
+                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
+                    <h5><span style="font-size: 13pt; color: #000000;">View instructions</span></h5>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Moment of examination -->
+    <div class="col-xs-20 col-md-4">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #0645ad; border-width: 1.5px; padding-top: 30px; padding-right: 30px; padding-left: 30px; text-align: left; height: 200px;">
+                <h4><span style="color: #000000; font-size: 14pt;"><strong><em>Moment of exam</em>  <i class="icon-document"></i></strong></span></h4>
+                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>We've listed down the most Frequently Asked Questions by teachers and students. Review the questions below to familiarize yourself with the exam process.</em></span></span></p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Assessments -->
+    <div class="col-xs-20 col-md-4">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
+                <div class="content-box pad-box-mini border border-b">
+                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Assessment and grades</em></span></h4>
+                </div>
+                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" data-api-returntype="Page">
+                    <h5><span style="font-size: 13pt; color: #000000;">View instructions</span></h5>
+                </a>
+            </div>
+        </div>
+    </div>
+
 </div>
 
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
-    <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers</b></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I made a few late adjustments to the exam in TestVision. What do I need to do?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">What do students need to bring to the exam?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ3">How long in advance do I need to be present at the location?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ4">What do I need to do during the exam?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ5">What happens if someone is late? Can students nevertheless start the exam?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ6">How is the extra time for students taken care of?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ7">What if a student does not have extra time during the exam?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ8">What will happen if anything goes wrong during the exam?</a></span></p>
-    <br>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Students</b></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students" target=_blank>Share this page with students</a></span></p>
+
+
+<div class="grid-row">
+    <!-- rechterzijde -->
+    <div class="col-xs-20 col-md-12">
+        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #0645ad; border-width: 1.5px; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fafafa;">
+
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>FAQ Teachers</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I made a few late adjustments to the exam in TestVision. What do I need to do?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">What do students need to bring to the exam?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ3">How long in advance do I need to be present at the location?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ4">What do I need to do during the exam?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ5">What happens if someone is late? Can students nevertheless start the exam?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ6">How is the extra time for students taken care of?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ7">What if a student does not have extra time during the exam?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ8">What will happen if anything goes wrong during the exam?</a></span></p>
+            <br>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>FAQ Students</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students" target=_blank>Share this page with students</a></span></p>
+        </div>
+    </div>
 </div>
+
+
 
 <!-- FAQ1 -->
 <p><a id="FAQ1"></a></p>
