--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -1,6 +1,9 @@
 <!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
+<!-- Back to top -->
+<p><a id="topmenu"></a></p>
+
 <!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
@@ -15,47 +18,78 @@
     </div>
 </div>
 
+<!-- Uitgebreide instructies -->
+<p style="text-align: center;"><span style="font-size: 13pt; float: middle;">This page is not fully updated yet. For now, please visit our
+<a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><strong><em>extensive instructions</em></strong></a>.</span></p>
+<hr />
+<br>
 
-<div>
-    <p style="text-align: center;">This page is not fully updated yet, please visit our <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>exstensive instruction</em></a> if details are missing.</p>
-    <hr />
-    <table style="border-collapse: collapse; width: 98.1164%; border-style: hidden; height: 53px;" border="0">
-        <tbody>
-            <tr style="height: 43px;">
-                <td style="width: 33.3033%; height: 43px; text-align: center;">
-                    <h4><strong>Before the Exam</strong></h4>
-                </td>
-                <td style="width: 33.3033%; height: 43px; text-align: center;">
-                    <h4><strong>During the Exam</strong></h4>
-                </td>
-                <td style="width: 33.3061%; height: 43px; text-align: center;">
-                    <h4><strong>After the Exam</strong></h4>
-                </td>
-            </tr>
-            <tr style="height: 10px;">
-                <td style="width: 33.3033%; height: 10px; text-align: center;">
-                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="_self" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7137620/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137620/" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137620" data-api-returntype="File" /></a></p>
-                </td>
-                <td style="width: 33.3033%; height: 10px; text-align: center;">
-                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="_self" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7137621/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137621/" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137621" data-api-returntype="File" /></a></p>
-                </td>
-                <td style="width: 33.3061%; height: 10px; text-align: center;">
-                    <p><img src="https://canvas.uva.nl/courses/8175/files/7137619/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137619/" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137619" data-api-returntype="File" /></p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-  </div>
+<div class="grid-row">
 
-    <!-- Back to top -->
-  <p><a id="topmenu"></a></p>
+    <!-- Questions + test -->
+    <div class="col-xs-20 col-md-4">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
+                <div class="content-box pad-box-mini border border-b">
+                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Exam settings</em></span></h4>
+                </div>
+                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
+                    <h5><span style="font-size: 13pt; color: #000000;">View instructions</span></h5>
+                </a>
+            </div>
+        </div>
+    </div>
 
+    <!-- Moment of examination -->
+    <div class="col-xs-20 col-md-4">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
+                <div class="content-box pad-box-mini border border-b">
+                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Moment of examination</em></span></h4>
+                </div>
+                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page">
+                    <h5><span style="font-size: 13pt; color: #000000;">View instructions</span></h5>
+                </a>
+            </div>
+        </div>
+    </div>
 
-  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
-      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers</b></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">Concept question 1</a></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">Concept question 2</a></span></p>
-  </div>
+    <!-- Assessments -->
+    <div class="col-xs-20 col-md-4">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #0645ad; border-width: 1.5px; padding-top: 30px; padding-right: 30px; padding-left: 30px; text-align: left; height: 200px;">
+                <h4><span style="color: #000000; font-size: 14pt;"><strong><em>Assessment and grades</em>  <i class="icon-document"></i></strong></span></h4>
+                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>Read how you can review the exam, how to find the exam scores in Canvas Final Grades, and read more about how to do an inspection.</em></span></span></p>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<div class="grid-row">
+    <!-- rechterzijde -->
+    <div class="col-xs-20 col-md-12">
+        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #0645ad; border-width: 1.5px; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fafafa;">
+
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Reviewing the exam</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">Concept question 1</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">Concept question 2</a></span></p>
+            <br>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Access scores and grades</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">Concept question 1</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">Concept question 2</a></span></p>
+            <br>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Inspection</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">Concept question 1</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">Concept question 2</a></span></p>
+            <br>
+        </div>
+    </div>
+</div>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
 
   <!-- FAQ1 -->
   <p>&nbsp;</p>
