Update pagina DT inspection

--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
@@ -22,13 +22,31 @@ https://canvas.uva.nl/courses/8175/pages/inspection
     </div>
 </div>
 
+<!--
 <p style="text-align: center;"><span style="font-size: 17pt;"><strong>More info coming soon </strong></span></p>
-
-<!-- Uitgebreide instructies -->
 <hr />
 <br>
 <p style="text-align: center;"><span style="font-size: 13pt; float: middle;">This page is not fully updated yet. For now, please visit our
 <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><strong><em>extensive instructions</em></strong></a>.</span></p>
+-->
+
+<br>
+<h4><p>Inspection with or without support</p></h4>
+<p>There are roughly two ways to do the inspection: you can have an inspection with technical support at location or without support. The disadvantage of inspection without support is that it reduces the possibility of reusing test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. Printing/downloading the inspection is an exception but can be difficult in large courses with +200 students.</p>
+<br><br>
+
+<div class="grid-row">
+
+    <div class="col-xs-20 col-md-4">
+        <p><strong>Booking inspection (with support)</strong><br />If you book an inspection at ICTO, in this case the inspection is provided with UvA laptops/computers and Assistant Floor Managers are present who technically prepare and support the inspection for you.</p>
+        <p><strong>Inspection without technical support</strong><br />ICTO does not request official support; the instructor(s) choose their own day, time, and (optional) location and communicate this to ICTO by email. The inspection works on a "bring your own device" basis. However, the inspection can also be printed out to students by the teacher.</p>
+    </div>
+
+    <div class="col-xs-20 col-md-8">
+        <p><img src="https://canvas.uva.nl/courses/8175/files/7246297/preview" alt="966365ba-b10d-465e-af99-bd33be8a3b0d.png" /></p>
+    </div>
+
+</div>
 
 
 <p>&nbsp;</p>
