--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
@@ -38,7 +38,8 @@ https://canvas.uva.nl/courses/8175/pages/inspection
 <div class="grid-row">
 
     <div class="col-xs-20 col-md-4">
-        <p><strong>Booking inspection (with support)</strong><br />If you book an inspection at ICTO, in this case the inspection is provided with UvA laptops/computers and Assistant Floor Managers are present who technically prepare and support the inspection for you.</p>
+        <p><strong>Booking inspection (with support)</strong><br />If you book an inspection at ICTO, in this case the inspection is provided with UvA laptops/computers and Assistant Floor Managers are present who technically prepare and support the inspection for you.<br>
+        If you want to do an inspection with support you should notify your programme coordinator way in advance (for more info, view the deadlines <a href="https://canvas.uva.nl/courses/8175/pages/testvision">on this page</a> (subsection: Applying for TestVision).</p>
         <p><strong>Inspection without technical support</strong><br />ICTO does not request official support; the instructor(s) choose their own day, time, and (optional) location and communicate this to ICTO by email. The inspection works on a "bring your own device" basis. However, the inspection can also be printed out to students by the teacher.</p>
     </div>
 
