--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -10,13 +10,15 @@
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/inspection" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/inspection"><span style="color: #08a8a2;"><i class="icon-student-view"></i><strong>&nbsp;Inspection</strong></span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-collection">&nbsp;</i>Extensive instructions</a>
             </div>
         </div>
     </div>
 </div>
+
+<h3 style="text-align: center;">TestVision instructions</h3>
 
 <div class="grid-row">
 
@@ -25,7 +27,7 @@
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
                 <div class="content-box pad-box-mini border border-b">
-                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Exam settings</em></span></h4>
+                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Creating the exam</em></span></h4>
                 </div>
                 <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
                     <h5><span style="font-size: 13pt; color: #000000;">View instructions</span></h5>
