--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -10,19 +10,15 @@
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/inspection" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/inspection"><span style="color: #08a8a2;"><i class="icon-student-view"></i><strong>&nbsp;Inspection</strong></span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-collection">&nbsp;</i>Extensive instructions</a>
             </div>
         </div>
     </div>
 </div>
 
-<!-- Uitgebreide instructies -->
-<p style="text-align: center;"><span style="font-size: 13pt; float: middle;">This page is not fully updated yet. For now, please visit our
-<a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><strong><em>extensive instructions</em></strong></a>.</span></p>
-<hr />
-<br>
+<h3 style="text-align: center;">TestVision instructions</h3>
 
 <div class="grid-row">
 
@@ -31,7 +27,7 @@
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
                 <div class="content-box pad-box-mini border border-b">
-                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Exam settings</em></span></h4>
+                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Creating the exam</em></span></h4>
                 </div>
                 <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
                     <h5><span style="font-size: 13pt; color: #000000;">View instructions</span></h5>
@@ -59,7 +55,7 @@
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #0645ad; border-width: 1.5px; padding-top: 30px; padding-right: 30px; padding-left: 30px; text-align: left; height: 200px;">
                 <h4><span style="color: #000000; font-size: 14pt;"><strong><em>Assessment and grades</em>  <i class="icon-document"></i></strong></span></h4>
-                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>Read how you can review the exam, how to find the exam scores in Canvas Final Grades, and read more about how to do an inspection.</em></span></span></p>
+                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>Read how you can review the exam, how to analyze and adjust the exam scores and how to find the TestVision grades in your Canvas Final Grades menu.</em></span></span></p>
             </div>
         </div>
     </div>
@@ -79,10 +75,6 @@
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">Concept question 1</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">Concept question 2</a></span></p>
             <br>
-            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Inspection</em>  <i class="icon-document"></i></strong></span></p></h3>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">Concept question 1</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">Concept question 2</a></span></p>
-            <br>
         </div>
     </div>
 </div>
@@ -96,7 +88,10 @@
   <p><a id="FAQ1"></a></p>
   <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
       <h4 style="text-align:center"><strong>Concept question 1</strong></h4>
-      <p style="padding:10px">Text</p>
+      <p>&nbsp;</p>
+      <p style="text-align: center;"><span style="font-size: 12pt; float: middle;">Some of the instructions are not fully updated yet. Please visit our
+      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</span></p>
+      <p>&nbsp;</p>
       <p>&nbsp;</p>
       <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
   </div>
@@ -106,7 +101,10 @@
   <p><a id="FAQ2"></a></p>
   <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
       <h4 style="text-align:center"><strong>Concept question 2</strong></h4>
-      <p style="padding:10px">Text</p>
+      <p>&nbsp;</p>
+      <p style="text-align: center;"><span style="font-size: 12pt; float: middle;">Some of the instructions are not fully updated yet. Please visit our
+      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</span></p>
+      <p>&nbsp;</p>
       <p>&nbsp;</p>
       <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
   </div>
